# multi-tenant-voice-ai-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
local_setup/: docker-compose.yml  ngrok-config.yml  quickstart_server.py
local_setup/telephony_server/: plivo_api_server.py  twilio_api_server.py
voice-agent-framework/: __init__.py  assistant.py
voice-agent-framework/agent_manager/: assistant_manager.py  base_manager.py  task_manager.py
voice-agent-framework/agent_types/: base_agent.py  contextual_conversational_agent.py  extraction_agent.py  graph_agent.py  graph_based_conversational_agent.py  knowledgebase_agent.py  summarization_agent.py  webhook_agent.py
voice-agent-framework/classification/: classification.py  deberta.py
voice-agent-framework/helpers/: analytics_helpers.py  function_calling_helpers.py  mark_event_meta_data.py  observable_variable.py  utils.py  vad.py
voice-agent-framework/input_handlers/: daily_webcall.py  default.py  telephony.py
voice-agent-framework/llms/: litellm.py  llm.py  openai_llm.py
voice-agent-framework/output_handlers/: daily_webcall.py  default.py  telephony.py
voice-agent-framework/synthesizer/: azure_synthesizer.py  base_synthesizer.py  cartesia_synthesizer.py  deepgram_synthesizer.py  elevenlabs_synthesizer.py  openai_synthesizer.py  polly_synthesizer.py  rime_synthesizer.py  sarvam_synthesizer.py  smallest_synthesizer.py
voice-agent-framework/transcriber/: azure_transcriber.py  base_transcriber.py  bodhi_transcriber.py  deepgram_transcriber.py  whisper_transcriber.py
(+8 files in other folders)
